(executable
  (name ml2hfl)
  (libraries
    re2
    fmt
    str
    unix
    core
    yojson
    batteries
    compiler-libs.common
  )
  (flags (:standard
           -alert -deprecated ; (BatString.nsplit is deprecated in batteries>=3)
           -w -6-9-11-21-26-27-32-33-38-39-50-52-57))
  (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv))
  (modes byte native))
